Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46649

MSVC warnings 4718 and 4127 in QMapData

XMLWordPrintable

    • 307f55129181f67fb99bd9dd38b7017928a0aae1 (qtbase/dev, 16.6.2015, 5.6)

      Code in QMapData::deleteNode() triggers warning C4127: conditional expression is constant. qmap.h already suppresses this warning for QMapNode::destroySubTree() just before QMapData::deleteNode(), #pragma warning(pop) just needs to be moved one function down.

      destroySubTree() triggers warning 4718 when QMap is used with simple types, like QMap<int, Foo*>:

      warning C4718: 'QMapNode<int,MooEdit * __ptr64>::destroySubTree' : recursive call has no side effects, deleting

        For Gerrit Dashboard: QTBUG-46649
        # Subject Branch Project Status CR V

            thiago Thiago Macieira
            muntyan Yevgen Muntyan
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes